fix spacing

--- a/src/components/AccTestComponent/DescribeRenderer/DescribeRenderer.module.scss
+++ b/src/components/AccTestComponent/DescribeRenderer/DescribeRenderer.module.scss
@@ -12,7 +12,6 @@
   display: flex;
   flex-direction: column;
   z-index: 0;
-  margin-top: 1rem;
 
   .describeClose {
     position: absolute;
@@ -55,6 +54,7 @@
     border-bottom: 1px solid $mint;
     background-color: rgba(0, 0, 0, 0);
     margin-top: .8rem;
+    margin-bottom: .8rem;
     font-size: 0.9rem;
     z-index: 3;
   }
